feat: an endpoint to create new clients
